Bug 1600572 - Remove suppression for fixed bug. r=Gankro

Differential Revision: https://phabricator.services.mozilla.com/D93505